--- a/test/OpenTelemetry.Contrib.Instrumentation.EventCounters.Tests/OpenTelemetry.Contrib.Instrumentation.EventCounters.Tests.csproj
+++ b/test/OpenTelemetry.Contrib.Instrumentation.EventCounters.Tests/OpenTelemetry.Contrib.Instrumentation.EventCounters.Tests.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
         <PackageReference Include="Moq" Version="4.16.1" />
         <PackageReference Include="coverlet.collector" Version="1.3.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNETTestSdkPkgVer)" />
