--- a/src/OpenTelemetry.Contrib.Extensions.PersistentStorage/OpenTelemetry.Contrib.Extensions.PersistentStorage.csproj
+++ b/src/OpenTelemetry.Contrib.Extensions.PersistentStorage/OpenTelemetry.Contrib.Extensions.PersistentStorage.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     <Description>OpenTelemetry Persistent Storage</Description>
-    <MinVerTagPrefix>PersistentStorage-</MinVerTagPrefix>
+    <MinVerTagPrefix>Extensions.PersistentStorage-</MinVerTagPrefix>
   </PropertyGroup>
 
   <PropertyGroup>
