--- a/src/OpenTelemetry.Contrib.Extensions.PersistentStorage/OpenTelemetry.Contrib.Extensions.PersistentStorage.csproj
+++ b/src/OpenTelemetry.Contrib.Extensions.PersistentStorage/OpenTelemetry.Contrib.Extensions.PersistentStorage.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <LangVersion>10.0</LangVersion>
     <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     <Description>OpenTelemetry Persistent Storage</Description>
     <MinVerTagPrefix>Extensions.PersistentStorage-</MinVerTagPrefix>
