--- a/test/OpenTelemetry.Contrib.Extensions.PersistentStorage.Tests/OpenTelemetry.Contrib.Extensions.PersistentStorage.Tests.csproj
+++ b/test/OpenTelemetry.Contrib.Extensions.PersistentStorage.Tests/OpenTelemetry.Contrib.Extensions.PersistentStorage.Tests.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <LangVersion>10.0</LangVersion>
     <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
     <TargetFrameworks Condition="$(OS) == 'Windows_NT'">$(TargetFrameworks);net461</TargetFrameworks>
     <IsPackable>false</IsPackable>
