--- a/.github/workflows/package-Instrumentation.EventCounters.yml
+++ b/.github/workflows/package-Instrumentation.EventCounters.yml
@@ -9,7 +9,7 @@ on:
         default: 'warning'
   push:
     tags:
-      - 'Instrumentation.EventCounters-*' # trigger when we create a tag with prefix "Instrumentation.AWS-"
+      - 'Instrumentation.EventCounters-*' # trigger when we create a tag with prefix "Instrumentation.EventCounters-"
 
 jobs:
   build-test-pack:
