--- a/test/OpenTelemetry.Contrib.Instrumentation.EntityFrameworkCore.Tests/OpenTelemetry.Contrib.Instrumentation.EntityFrameworkCore.Tests.csproj
+++ b/test/OpenTelemetry.Contrib.Instrumentation.EntityFrameworkCore.Tests/OpenTelemetry.Contrib.Instrumentation.EntityFrameworkCore.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Description>Unit test project for OpenTelemetry Microsoft.EntityFrameworkCore instrumentation</Description>
-    <TargetFrameworks>netcoreapp2.1;netcoreapp3.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
