--- a/test/OpenTelemetry.Contrib.Instrumentation.Wcf.Tests/OpenTelemetry.Contrib.Instrumentation.Wcf.Tests.csproj
+++ b/test/OpenTelemetry.Contrib.Instrumentation.Wcf.Tests/OpenTelemetry.Contrib.Instrumentation.Wcf.Tests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Description>Unit test project for OpenTelemetry WCF instrumentation</Description>
-    <TargetFrameworks>netcoreapp2.1;netcoreapp3.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
     <TargetFrameworks Condition="$(OS) == 'Windows_NT'">$(TargetFrameworks);net452</TargetFrameworks>
   </PropertyGroup>
 
