--- a/src/OpenTelemetry.Contrib.Instrumentation.Runtime/OpenTelemetry.Contrib.Instrumentation.Runtime.csproj
+++ b/src/OpenTelemetry.Contrib.Instrumentation.Runtime/OpenTelemetry.Contrib.Instrumentation.Runtime.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netcoreapp3.1;net6.0</TargetFrameworks>
+        <TargetFrameworks>netstandard2.0;net461;netcoreapp3.1;net6.0</TargetFrameworks>
         <Description>dotnet runtime instrumentation for OpenTelemetry .NET</Description>
         <PackageTags>$(PackageTags);OpenTelemetry;runtime</PackageTags>
         <MinVerTagPrefix>Instrumentation.Runtime-</MinVerTagPrefix>
