--- a/test/OpenTelemetry.Contrib.Instrumentation.Runtime.Tests/OpenTelemetry.Contrib.Instrumentation.Runtime.Tests.csproj
+++ b/test/OpenTelemetry.Contrib.Instrumentation.Runtime.Tests/OpenTelemetry.Contrib.Instrumentation.Runtime.Tests.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFrameworks>netcoreapp3.1;net6.0</TargetFrameworks>
-
+        <TargetFrameworks Condition="$(OS) == 'Windows_NT'">$(TargetFrameworks);net461</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
