--- a/src/OpenTelemetry.Extensions.PersistentStorage.Abstractions/OpenTelemetry.Extensions.PersistentStorage.Abstractions.csproj
+++ b/src/OpenTelemetry.Extensions.PersistentStorage.Abstractions/OpenTelemetry.Extensions.PersistentStorage.Abstractions.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net462</TargetFrameworks>
     <Description>OpenTelemetry Persistent Storage</Description>
-    <MinVerTagPrefix>Extensions.PersistentStorage.Api-</MinVerTagPrefix>
+    <MinVerTagPrefix>Extensions.PersistentStorage.Abstractions-</MinVerTagPrefix>
   </PropertyGroup>
 
   <PropertyGroup>
