--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -7,6 +7,9 @@ components:
     - lupengamzn
   src/OpenTelemetry.Contrib.Instrumentation.AWS/:
     - srprash
+  src/OpenTelemetry.Contrib.Instrumentation.AWSLambda/:
+    - rypdal
+    - Oberon00
   src/OpenTelemetry.Exporter.Geneva/:
     - cijothomas
     - codeblanch
@@ -52,6 +55,9 @@ components:
     - lupengamzn
   test/OpenTelemetry.Contrib.Instrumentation.AWS.Tests/:
     - srprash
+  test/OpenTelemetry.Contrib.Instrumentation.AWSLambda.Tests/:
+    - rypdal
+    - Oberon00
   test/OpenTelemetry.Exporter.Geneva.Benchmark/:
     - cijothomas
     - codeblanch
