--- a/.github/workflows/dotnet-format.yml
+++ b/.github/workflows/dotnet-format.yml
@@ -20,7 +20,7 @@ jobs:
     - name: check out code
       uses: actions/checkout@v3
 
-    - name: Setup .NET Core 6.0
+    - name: Setup .NET 6.0
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 6.0.x
