--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -21,6 +21,9 @@ components:
     - SergeyKanzhelev
   src/OpenTelemetry.Extensions/:
     - codeblanch
+  src/OpenTelemetry.Extensions.AzureMonitor/:
+    - rajkumar-rangaraj
+    - vishweshbankwar
   src/OpenTelemetry.Extensions.Docker/:
     - iskiselev
   src/OpenTelemetry.Extensions.PersistentStorage.Abstractions/:
