--- a/src/OpenTelemetry.Instrumentation.MassTransit/OpenTelemetry.Instrumentation.MassTransit.csproj
+++ b/src/OpenTelemetry.Instrumentation.MassTransit/OpenTelemetry.Instrumentation.MassTransit.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <Description>OpenTelemetry instrumentation for MassTransit</Description>
     <PackageTags>$(PackageTags);distributed-tracing;MassTransit</PackageTags>
     <MinVerTagPrefix>Instrumentation.MassTransit-</MinVerTagPrefix>
